@@ -1,13 +1,19 @@
 package ru.yandex.practicum.catsgram.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
+import ru.yandex.practicum.catsgram.dal.ImageRepository;
+import ru.yandex.practicum.catsgram.dal.PostRepository;
+import ru.yandex.practicum.catsgram.dto.ImageDto;
+import ru.yandex.practicum.catsgram.dto.ImageUploadResponse;
 import ru.yandex.practicum.catsgram.exception.ConditionsNotMetException;
 import ru.yandex.practicum.catsgram.exception.ImageFileException;
 import ru.yandex.practicum.catsgram.exception.NotFoundException;
+import ru.yandex.practicum.catsgram.mapper.ImageMapper;
 import ru.yandex.practicum.catsgram.model.Image;
 import ru.yandex.practicum.catsgram.model.ImageData;
 import ru.yandex.practicum.catsgram.model.Post;
@@ -17,36 +23,81 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Instant;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ImageService {
+    private final ImageRepository imageRepository;
+    private final PostRepository postRepository;
 
-    private final PostService postService;
-    private final Map<Long, Image> images = new HashMap<>();
-    // директория для хранения изображений
-    @Value("${Catsgram.image-directory}")
+    @Value("${C:\\Users\\xDnBx\\IdeaProjects\\Catsgram}")
     private String imageDirectory;
 
-    // получение данных об изображениях указанного поста
-    public List<Image> getPostImages(long postId) {
-        return images.values().stream()
-                .filter(image -> image.getPostId() == postId)
-                .toList();
+    public List<ImageUploadResponse> saveImages(long postId, List<MultipartFile> files) {
+        return files.stream().map(file -> saveImage(postId, file)).collect(Collectors.toList());
     }
 
-    // загружаем данные указанного изображения с диска
+    public ImageUploadResponse saveImage(long postId, MultipartFile file) {
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() -> new ConditionsNotMetException("Указанный пост не найден"));
+
+        // Сохраняем изображение на диск и возвращаем путь к файлу
+        Path filePath = saveFile(file, post);
+
+        Image image = imageRepository.save(ImageMapper.mapToImage(postId, filePath, file.getOriginalFilename()));
+
+        return ImageMapper.mapToImageUploadResponse(image);
+    }
+
+    public List<ImageDto> getImages(long postId) {
+        return imageRepository.findByPostId(postId)
+                .stream()
+                .map(image -> {
+                    byte[] bytes = loadFile(image);
+                    return ImageMapper.mapToImageDto(image, bytes);
+                }).collect(Collectors.toList());
+    }
+
+    // Загружаем данные указанного изображения с диска
     public ImageData getImageData(long imageId) {
-        if (!images.containsKey(imageId)) {
-            throw new NotFoundException("Изображение с id = " + imageId + " не найдено");
-        }
-        Image image = images.get(imageId);
-        // загрузка файла с диска
+        Image image = imageRepository.findById(imageId)
+                .orElseThrow(() -> new NotFoundException("Изображение с id = " + imageId + " не найдено"));
+
+        // Загрузка файла с диска
         byte[] data = loadFile(image);
+
         return new ImageData(data, image.getOriginalFileName());
+    }
+
+    private Path saveFile(MultipartFile file, Post post) {
+        try {
+            // Формирование уникального имени файла на основе текущего времени и расширения оригинального файла
+            String uniqueFileName = String.format("%d.%s", Instant.now().toEpochMilli(),
+                    StringUtils.getFilenameExtension(file.getOriginalFilename()));
+
+            // Формирование пути для сохранения файла с учетом идентификаторов автора и поста
+            Path uploadPath = Paths.get(
+                    imageDirectory,
+                    String.valueOf(post.getAuthor().getId()),
+                    String.valueOf(post.getId())
+            );
+
+            Path filePath = uploadPath.resolve(uniqueFileName);
+
+            // Создаём директории, если они еще не созданы
+            if (!Files.exists(uploadPath)) {
+                Files.createDirectories(uploadPath);
+            }
+
+            // Сохраняем файл по сформированному пути
+            file.transferTo(filePath);
+            return filePath;
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     private byte[] loadFile(Image image) {
@@ -55,68 +106,12 @@ public class ImageService {
             try {
                 return Files.readAllBytes(path);
             } catch (IOException e) {
-                throw new ImageFileException("Ошибка чтения файла.  Id: " + image.getId() + ", name: "
-                        + image.getOriginalFileName(), e);
+                throw new ImageFileException("Ошибка чтения файла.  Id: " + image.getId()
+                        + ", name: " + image.getOriginalFileName(), e);
             }
         } else {
-            throw new ImageFileException("Файл не найден. Id: " + image.getId() + ", name: "
-                    + image.getOriginalFileName());
+            throw new ImageFileException("Файл не найден. Id: " + image.getId()
+                    + ", name: " + image.getOriginalFileName());
         }
-    }
-
-    private Path saveFile(MultipartFile file, Post post) {
-        try {
-            // формирование уникального названия файла на основе текущего времени и расширения оригинального файла
-            String uniqueFileName = String.format("%$d.%s", Instant.now().toEpochMilli(),
-                    StringUtils.getFilenameExtension(file.getOriginalFilename()));
-            // формирование пути для сохранения файла с учётом идентификаторов автора и поста
-            Path uploadPath = Paths.get(imageDirectory, String.valueOf(post.getAuthorId()), post.getId().toString());
-            Path filePath = uploadPath.resolve(uniqueFileName);
-
-            // создаём директории, если они ещё не созданы
-            if (!Files.exists(uploadPath)) {
-                Files.createDirectories(uploadPath);
-            }
-
-            // сохраняем файл по сформированному пути
-            file.transferTo(filePath);
-            return filePath;
-        } catch (Exception e) {
-            throw new RuntimeException();
-        }
-    }
-
-    // сохранение списка изображений, связанных с указанным постом
-    public List<Image> saveImages(long postId, List<MultipartFile> files) {
-        return files.stream().map(file -> saveImage(postId, file)).toList();
-    }
-
-    // сохранение отдельного изображения, связанного с указанным постом
-    private Image saveImage(long postId, MultipartFile file) {
-        Post post = postService.findPostById(postId)
-                .orElseThrow(() -> new ConditionsNotMetException("Указанный пост не найден"));
-
-        // сохраняем изображение на диск и возвращаем путь к файлу
-        Path filePath = saveFile(file, post);
-        // создаём объект для хранения данных изображения
-        long imageId = getNextId();
-        // создание объекта изображения и заполнение его данными
-        Image image = new Image();
-        image.setId(imageId);
-        image.setFilePath(filePath.toString());
-        image.setPostId(postId);
-        // запоминаем название файла, которое было при его передаче
-        image.setOriginalFileName(file.getOriginalFilename());
-        images.put(imageId, image);
-        return image;
-    }
-
-    private long getNextId() {
-        long currentMaxId = images.keySet()
-                .stream()
-                .mapToLong(id -> id)
-                .max()
-                .orElse(0);
-        return ++currentMaxId;
     }
 }
